# rmp-server

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  torrent.rs
src/torrent/: client.rs  downloader.rs  search.rs  source.rs
src/torrent/source/: l337xto.rs
tests/: lib.rs
tests/fixtures/: html_responses.rs  mod.rs  test_data.rs
tests/integration/: api_tests.rs  mod.rs  search_tests.rs
tests/mocks/: downloader.rs  mod.rs  torrent_source.rs  transmission_client.rs
