[package]
name = "remote-media-pi"
version = "0.1.0"
authors = ["Leonardo <leoslamas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
scraper = "0.12.0"
transmission-rpc = { git = "https://github.com/leoslamas/transmission-rpc.git", tag="0.3.6-1"}
reqwest = { version = "0.10.8", features = ["json", "rustls-tls", "blocking"], default-features = false }
tokio = { version = "0.2.25", features = ["full"] }
serde = { version = "1.0.59", features = ["derive"] }
# rustc-serialize = "0.3.24"
enum-iterator = "0.6.0"
env_logger = "0.7.1"
dotenv = "0.15.0"
log = "0.4.17"

[profile.release]
lto = true
